--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div id="main">
-		<p>This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.</p>
+		<p>This is a demo of box model try to replicate this box model in Html & Css and pass all the test cases.</p>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
